# riot_tap

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  meltano.yml  plugin.yml  pyproject.toml  requirements.txt
tap_riotapi/: __init__.py  __main__.py  client.py  mixins.py  rate_limiting.py  streams.py  tap.py  utils.py
tap_riotapi/streams/: __init__.py  match_history_mixin.py  mixins.py  ranked_tft_apex_league_streams.py  ranked_tft_normal_league_streams.py  tft_player_streams.py
tap_riotapi/streams/mixins/: match_history.py  rest_util.py  tft_endpts.py
tests/: __init__.py  test_core.py
