[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tap-riotapi"
version = "0.0.1"
dependencies = [
    "singer-sdk",
    "requests",
    "python-dateutil",
    "meltano",
    "backoff"
]

[project.scripts]
tap-riotapi = "tap_riotapi.tap:TapRiotAPI.cli"